k8s/order-service/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: micro_service_order_service:latest  # Make sure to add the correct tag, e.g., latest
          imagePullPolicy: Never  # Prevents Kubernetes from pulling the image from a registry
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30003
  type: NodePort
